src/components/ItemModal/ItemModal.css
.modal {
  position: fixed;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: rgba(0, 0, 0, 0.5);
}

.item-modal__content {
  position: relative;
  background-color: white;
  max-width: 498px;
  height: 610px;
  width: 100%;
  border-radius: 20px;
  /* padding: 28px 28px; */
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.modal__close-button {
  position: absolute;
  /* bottom: calc(100% - 20px);
  left: calc(100% - 20px); */
  top: 20px;
  right: 20px;
  border: none;
  background-color: transparent;
  cursor: pointer;
  height: 20px;
  width: 20px;
  background-repeat: no-repeat;
  background-size: contain;
  transition: opacity 0.2s linear;
}

.modal__item-close-button {
  background-image: url("../../images/item-modal close.svg");
}

.item-modal__image {
  width: 498px;
  border-radius: 10px;
  cursor: pointer;
}

.item-modal__description {
  display: flex;
  flex-direction: column;
  gap: 12px;
}

.item-modal__footer {
  display: flex;
  justify-content: space-between;
  padding: 32px;
}

.item-modal__delete-button {
  border: none;
  cursor: pointer;
  background-color: white;
  transition: opacity 0.2s linear;
  font-weight: 700;
  color: red;
}

